--- a/cake.html
+++ b/cake.html
@@ -130,9 +130,9 @@
         </div>
     
         <div class="footer" id="contact">
-            <p>Email: yingying.zhang11@my.jcu.edu.au</p>
+            <p>Email: weiyu.zhu@my.jcu.edu.au</p>
             <p>Phone:+65 12345678</p>
-            <p>Copyright © 2023 All Rights Reserved.</p>
+            <p>Copyright © 2024 All Rights Reserved.</p>
         </footer>
     </body>
 </html> 
